Fix ShiftTypeStatistics css issues

--- a/resources/js/components/dutyOverview/employeeRow/dutyCell/DutyCell.scss
+++ b/resources/js/components/dutyOverview/employeeRow/dutyCell/DutyCell.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Nunito");
+// @import url("https://fonts.googleapis.com/css?family=OpenSans");
 
 // // Variables
 // @import "variables";
@@ -16,7 +16,7 @@
     border-radius: 0.2rem;
     text-align: center;
     justify-self: center;
-    font-weight: 800;
+    font-weight: 900;
     font-size: 1rem;
 
     .wishInjury {
@@ -46,7 +46,7 @@
     border-radius: 0.2rem;
     text-align: center;
     justify-self: center;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 1rem;
 }
 
@@ -61,7 +61,7 @@
     border-radius: 0.2rem;
     text-align: center;
     justify-self: center;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 1rem;
     background-color: lightsalmon
 }
@@ -73,7 +73,7 @@
     border-radius: 0.2rem;
     text-align: center;
     justify-self: center;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 1rem;
     background-color: lightgoldenrodyellow
 }
@@ -85,7 +85,7 @@
     border-radius: 0.2rem;
     text-align: center;
     justify-self: center;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 1rem;
     animation: blink 0.3s ease 0s 2 normal;
 
